--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,14 @@
   </head>
 
   <body>
-    <%= yield %>
+  <%= render 'layouts/navigation' %>
+  <%= render 'layouts/messages' %>
+
+	<div class="container">
+    	<%= yield %>
+  </div>
+
+  <%= render 'layouts/footer' %>
+    
   </body>
 </html>
